--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="page_bg">#121212</color>
-
-    <color name="chart_card_bg">#1E1E1E</color>
-
-    <color name="chart_text">#FFFFFF</color>
-
     <color name="purple_500">#BB86FC</color>
     <color name="purple_700">#3700B3</color>
     <color name="teal_200">#03DAC5</color>
     <color name="teal_700">#018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#FFFFFFFF</color>
+    <color name="white">#FF000000</color>
+
+    <color name="page_bg">#121212</color>
+    <color name="card_bg">#1E1E1E</color>
+    <color name="nav_bg">#1E1E1E</color>
+    <color name="text_primary">#E0E0E0</color>
+    <color name="text_secondary">#B0B0B0</color>
+    <color name="icon_tint">#BB86FC</color>
+    <color name="chart_text">#E0E0E0</color>
+    <color name="chart_card_bg">#1E1E1E</color>
 </resources>
+
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<resources>-->
+<!--    <color name="page_bg">#121212</color>-->
+
+<!--    <color name="chart_card_bg">#1E1E1E</color>-->
+
+<!--    <color name="chart_text">#FFFFFF</color>-->
+
+<!--    <color name="purple_500">#BB86FC</color>-->
+<!--    <color name="purple_700">#3700B3</color>-->
+<!--    <color name="teal_200">#03DAC5</color>-->
+<!--    <color name="teal_700">#018786</color>-->
+<!--    <color name="black">#FF000000</color>-->
+<!--    <color name="white">#FFFFFFFF</color>-->
+<!--</resources>-->
