--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
     <style name="Base.Theme.MoodBox" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    </style>
+
+    <style name="Theme.MoodBox" parent="Base.Theme.MoodBox">
+        <item name="android:statusBarColor">@color/page_bg</item>
+
+        <item name="android:windowLightStatusBar">false</item>
+
+        <item name="android:windowBackground">@color/page_bg</item>
     </style>
 </resources>
