--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="page_bg">#F5F7FA</color>
-
+    <color name="purple_500">#6200EE</color>
+    <color name="purple_700">#3700B3</color>
+    <color name="teal_200">#03DAC5</color>
+    <color name="teal_700">#018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="purple_500">#FF6200EE</color>
-
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-
-    <color name="chart_card_bg">#FFFFFF</color>
+    <color name="page_bg">#F5F7FA</color>
+    <color name="card_bg">#FFFFFF</color>
+    <color name="nav_bg">#FFFFFF</color>
+    <color name="text_primary">#333333</color>
+    <color name="text_secondary">#757575</color>
+    <color name="icon_tint">#6200EE</color>
     <color name="chart_text">#333333</color>
+    <color name="chart_card_bg">#FFFFFF</color>
 </resources>
