--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
     <style name="Base.Theme.MoodBox" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.MoodBox" parent="Base.Theme.MoodBox" />
+    <style name="Theme.MoodBox" parent="Base.Theme.MoodBox">
+        <item name="android:statusBarColor">@color/page_bg</item>
+
+        <item name="android:windowLightStatusBar">true</item>
+
+        <item name="android:windowBackground">@color/page_bg</item>
+    </style>
 </resources>
