--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_500">#BB86FC</color>
-    <color name="purple_700">#3700B3</color>
+    <color name="purple_500">#BB86FC</color> <color name="purple_700">#3700B3</color>
     <color name="teal_200">#03DAC5</color>
-    <color name="teal_700">#018786</color>
-    <color name="black">#FFFFFFFF</color>
-    <color name="white">#FF000000</color>
+    <color name="teal_700">#03DAC5</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
 
     <color name="page_bg">#121212</color>
     <color name="card_bg">#1E1E1E</color>
@@ -15,6 +14,8 @@
     <color name="icon_tint">#BB86FC</color>
     <color name="chart_text">#E0E0E0</color>
     <color name="chart_card_bg">#1E1E1E</color>
+
+    <color name="star_active">#FFC107</color>
 </resources>
 
 <!--<?xml version="1.0" encoding="utf-8"?>-->
